--- a/renewal_main/main.html
+++ b/renewal_main/main.html
@@ -1,257 +1,160 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>렉스이노베이션</title>
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+
     <link rel="stylesheet" href="./style/slide.css" type="text/css" />
+    <link rel="stylesheet" href="./style.css" type="text/css" />
     <link rel="stylesheet" href="./style/header.css" type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
     <script src="./components/slide.js"></script>
     <script src="./components/header.js"></script>
     <script>
       $(document).ready(() => {
-        let lang = "KR";
-        let $krBtn = $(".header__language-button--kr");
-        let $enBtn = $(".header__language-button--en");
-        let scrollCheck = false;
-
-        const updateHeaderStyle = (state) => {
-          const logoImg = state ? "./images/logo_color.png" : "./images/logo_black.png";
-          const langImg = state ? "./images/lang_icon2.png" : "./images/lang_icon.png";
-          const hrColor = state ? "#999999" : "rgba(255, 255, 255, 0.5)";
-          const headerMenuColor = state ? "black" : "white";
-          const langBtnBorder = state ? "solid 1px #999999" : "solid 1px white";
-          let headerBorderBot;
-          const menuImg = state ? "./images/menu_black.png" : "./images/menu_color.png";
-
-          let headerConBgColor;
-
-          let windowWidth = $(window).width();
-          if (windowWidth < 1007) {
-            if (state) {
-              headerConBgColor = "rgba(255, 255, 255, 0.9)";
-            } else {
-              headerConBgColor = "transparent";
-            }
-          } else {
-            if (state) {
-              headerConBgColor = "white";
-              headerBorderBot = "solid 1px #999999";
-            } else {
-              headerConBgColor = "transparent";
-              headerBorderBot = "solid 1px transparent";
-            }
-          }
-
-          const langSpan = (val) => {
-            if (state) {
-              if (lang === val) {
-                return "black";
-              } else {
-                return "#999999";
-              }
-            } else {
-              if (lang === val) {
-                return "white";
-              } else {
-                return "rgba(255, 255, 255, 0.5)";
-              }
-            }
-          };
-
-          $(".header").css("borderBottom", headerBorderBot);
-          $(".header").css("backgroundColor", headerConBgColor);
-          $(".header__logo img").attr("src", logoImg);
-          $(".header__menu").css("color", headerMenuColor);
-          $(".header__language-button-box img").attr("src", langImg);
-          $(".header__language-button-box").css("border", langBtnBorder);
-          $(".header__language-button--hr").css("color", hrColor);
-          $(".menu__btn-con img").attr("src", menuImg);
-          $krBtn.css("color", langSpan("KR"));
-          $enBtn.css("color", langSpan("EN"));
-        };
-
-        $(".menu__btn-con img").click(() => {
-          console.log("클릭됨");
-        });
-
-        // 언어 버튼 클릭 이벤트 핸들러
-        $krBtn.click(() => {
-          lang = "KR";
-          updateHeaderStyle(true);
-        });
-        $enBtn.click(() => {
-          lang = "EN";
-          updateHeaderStyle(true);
-        });
-
-        // 스크롤 이벤트 핸들러
-        $(window).scroll(() => {
-          if (scrollY > 120) {
-            scrollCheck = true;
-            updateHeaderStyle(true);
-          } else {
-            scrollCheck = false;
-            updateHeaderStyle(false);
-          }
-        });
-
-        // 초기 스타일 업데이트
-        updateHeaderStyle(false);
-
-        // 헤더 마우스 오버시 로직
-        $(".header").hover(
-          () => {
-            if (!scrollCheck) {
-              updateHeaderStyle(true);
-            }
-          },
-          () => {
-            if (!scrollCheck) {
-              updateHeaderStyle(false);
-            }
-            $(".header__submenu-con").slideUp();
-          }
-        );
-
-        $(".header__menu, .header__submenu-con").hover(
-          () => {
-            $(".header__submenu-con").stop().slideDown().css("display", "grid");
-          },
-          () => {
-            $(".header__submenu-con").stop().slideUp();
-          }
-        );
+        const $windowWidth = $(window).width();
+        if ($windowWidth < 1007) {
+          console.log("모바일 화면");
+        } else {
+          console.log("웹 화면");
+        }
       });
     </script>
   </head>
   <body>
-    <div class="slide-con">
-      <div class="slide">
-        <div class="slider">
-          <img src="./images/bg1.png" />
-          <div class="slide-text">
-            <span class="title"
-              >렉스이노베이션의 첨단 정보통신 기술이 재생에너지의 스마트 그리드화를 이끌어 갑니다.</span
-            >
-            <span class="sub">지속가능한 에너지 공급과 환경보호를 동시에 실현하는 기업</span>
+    <header class="header">
+      <div class="header__logo">
+        <img src="./images/logo_black.png" alt="Company Logo" />
+      </div>
+      <nav class="header__menu-con">
+        <div class="header__menu-box">
+          <span class="header__menu-title">회사소개</span>
+          <div class="header__menu-sub">
+            <a href="#">인사말</a>
+            <a href="#">연혁</a>
+            <a href="#">인증내역</a>
+            <a href="#">수상내역</a>
+            <a href="#">MEMBER</a>
+            <a href="#">찾아오시는 방법</a>
           </div>
         </div>
-        <div class="slider">
+        <div class="header__menu-box">
+          <span class="header__menu-title">비즈니스 분야</span>
+          <div class="header__menu-sub">
+            <a href="#">재생에너지 발전</a>
+            <a href="#">VPP(가상발전소)</a>
+            <a href="#">ESS(에너지저장시스템)</a>
+            <a href="#">Power to Vehicle(P2V)</a>
+            <a href="#">DR(Demand Response)</a>
+            <a href="#">Fintech</a>
+          </div>
+        </div>
+        <div class="header__menu-box">
+          <span class="header__menu-title">보유기술</span>
+          <div class="header__menu-sub">
+            <a href="#">AI 빅데이터센터</a>
+            <a href="#">기술 특허 현황</a>
+            <a href="#">기업부설연구소 R&D실적</a>
+            <a href="#">시험성적</a>
+          </div>
+        </div>
+        <div class="header__menu-box">
+          <span class="header__menu-title">IR</span>
+          <div class="header__menu-sub">
+            <a href="#">공지사항</a>
+            <a href="#">기업정보(IR)</a>
+            <a href="#">투자하기</a>
+          </div>
+        </div>
+        <div class="header__menu-box">
+          <span class="header__menu-title">PR</span>
+          <div class="header__menu-sub">
+            <a href="#">NEWS</a>
+            <a href="#">인사이트</a>
+            <a href="#">시장동향</a>
+            <a href="#">문의사항</a>
+            <a href="#">자료실</a>
+            <a href="#">인재채용</a>
+          </div>
+        </div>
+      </nav>
+      <div class="header__right-con">
+        <div class="header__button-con">
+          <div class="header__language-button-box">
+            <span class="header__language-button--kr">KR</span>
+            <span class="header__language-button--hr">|</span>
+            <span class="header__language-button--en">EN</span>
+            <img src="./images/lang_icon.png" alt="Language Icon" />
+          </div>
+          <div class="menu__btn-con">
+            <img src="./images/menu_color.png" alt="Menu Icon" />
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="slide-con">
+      <div class="slide">
+        <div class="slide__item">
+          <img src="./images/bg1.png" />
+          <div class="slide__text-box">
+            <span class="text-box__title"
+              >렉스이노베이션의 첨단 정보통신 기술이 재생에너지의 스마트 그리드화를 이끌어 갑니다.</span
+            >
+            <span class="text-box__sub">지속가능한 에너지 공급과 환경보호를 동시에 실현하는 기업</span>
+          </div>
+        </div>
+        <div class="slide__item">
           <img src="./images/bg2.png" />
-          <div class="slide-text">
-            <span class="title">친환경 미래기술을 선도하는 REC’s INNOVATION</span>
-            <span class="sub">
+          <div class="slide__text-box">
+            <span class="text-box__title">친환경 미래기술을 선도하는 REC’s INNOVATION</span>
+            <span class="text-box__sub">
               끊임없는 연구개발로 쌓아온 고도화된 기술력으로 더 나은 미래를 위한 솔루션을 제공합니다.
             </span>
           </div>
         </div>
-        <div class="slider">
+        <div class="slide__item">
           <img src="./images/bg3.png" />
-          <div class="slide-text">
-            <span class="title"
+          <div class="slide__text-box">
+            <span class="text-box__title"
               >청정 에너지로 우리의 미래를 밝혀나가는 길, 재생에너지의 힘과 혁신을 렉스이노베이션이 만들어갑니다.</span
             >
-            <span class="sub">친환경 에너지를 통해 지구 환경을 보호하고 인류의 행복을 추구하는 기업</span>
+            <span class="text-box__sub">친환경 에너지를 통해 지구 환경을 보호하고 인류의 행복을 추구하는 기업</span>
           </div>
         </div>
-        <div class="slider">
+        <div class="slide__item">
           <img src="./images/bg4.png" />
-          <div class="slide-text">
-            <span class="title">대한민국의 바다 환경을 이용한 육상양어장에 소수력발전소를 건설합니다.</span>
-            <span class="sub">친환경 소수력발전소 100기 건설로 에너지자립을 선도하는 기업</span>
+          <div class="slide__text-box">
+            <span class="text-box__title">대한민국의 바다 환경을 이용한 육상양어장에 소수력발전소를 건설합니다.</span>
+            <span class="text-box__sub">친환경 소수력발전소 100기 건설로 에너지자립을 선도하는 기업</span>
           </div>
         </div>
-        <div class="slider">
+        <div class="slide__item">
           <img src="./images/bg5.png" />
-          <div class="slide-text">
-            <span class="title">녹색금융 플랫폼 렉스펀드가 기후위기로부터 대한민국의 탄소중립을 앞당기겠습니다.</span>
-            <span class="sub">블록체인 기술을 활용한 Fintech 전문기업</span>
+          <div class="slide__text-box">
+            <span class="text-box__title"
+              >녹색금융 플랫폼 렉스펀드가 기후위기로부터 대한민국의 탄소중립을 앞당기겠습니다.</span
+            >
+            <span class="text-box__sub">블록체인 기술을 활용한 Fintech 전문기업</span>
           </div>
         </div>
       </div>
-      <div class="slide-bottom-con">
-        <div class="slide-bottom">
-          <div class="slide-time-box">
-            <div class="slide-number-text"></div>
-            <div class="timebar-box">
-              <div class="timebar"></div>
+      <div class="slide-nav-con">
+        <div class="nav-con__bot">
+          <div class="nav-con__time-box">
+            <div class="nav-con__start"></div>
+            <div class="nav-con__timebar-box">
+              <div class="timerbar-box__timebar"></div>
             </div>
-            <div class="slide-number-text2"><span>05</span></div>
+            <div class="nav-con__end"><span>05</span></div>
           </div>
-          <div class="slide-icon">
-            <img class="prev" src="./images/prev_icon.png" alt="" />
-            <img class="next" src="./images/start_icon.png" alt="" />
+          <div class="slide-icon-box">
+            <img class="icon-box__prev" src="./images/prev_icon.png" alt="" />
+            <img class="icon-box__next" src="./images/start_icon.png" alt="" />
           </div>
         </div>
       </div>
-      <header class="header">
-        <div class="header__logo">
-          <img src="./images/logo_black.png" alt="Company Logo" />
-        </div>
-        <nav class="header__menu">
-          <span class="header__menu-item">회사소개</span>
-          <span class="header__menu-item">비즈니스 분야</span>
-          <span class="header__menu-item">보유기술</span>
-          <span class="header__menu-item">IR</span>
-          <span class="header__menu-item">PR</span>
-        </nav>
-        <div class="header__submenu-con">
-          <div></div>
-          <div class="header__submenu-box">
-            <div class="header__submenu">
-              <a href="#">인사말</a>
-              <a href="#">연혁</a>
-              <a href="#">인증내역</a>
-              <a href="#">수상내역</a>
-              <a href="#">MEMBER</a>
-              <a href="#">찾아오시는 방법</a>
-            </div>
-            <div class="header__submenu">
-              <a href="#">재생에너지 발전</a>
-              <a href="#">VPP(가상발전소)</a>
-              <a href="#">ESS(에너지저장시스템)</a>
-              <a href="#">Power to Vehicle(P2V)</a>
-              <a href="#">DR(Demand Response)</a>
-              <a href="#">Fintech</a>
-            </div>
-            <div class="header__submenu">
-              <a href="#">AI 빅데이터센터</a>
-              <a href="#">기술 특허 현황</a>
-              <a href="#">기업부설연구소 R&D실적</a>
-              <a href="#">시험성적</a>
-            </div>
-            <div class="header__submenu">
-              <a href="#">공지사항</a>
-              <a href="#">기업정보(IR)</a>
-              <a href="#">투자하기</a>
-            </div>
-            <div class="header__submenu">
-              <a href="#">NEWS</a>
-              <a href="#">인사이트</a>
-              <a href="#">시장동향</a>
-              <a href="#">문의사항</a>
-              <a href="#">자료실</a>
-              <a href="#">인재채용</a>
-            </div>
-          </div>
-          <div></div>
-        </div>
-        <div class="header__right-con">
-          <div class="header__language-button-con">
-            <div class="header__language-button-box">
-              <span class="header__language-button--kr">KR</span>
-              <span class="header__language-button--hr">|</span>
-              <span class="header__language-button--en">EN</span>
-              <img src="./images/lang_icon.png" alt="Language Icon" />
-            </div>
-            <div class="menu__btn-con">
-              <img src="./images/menu_color.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </header>
     </div>
     <div style="height: 100vh"></div>
   </body>
